[package]
name = "scrape"
version = "0.1.0"
edition = "2024"

[dependencies]
item-core = { git = "https://github.com/blitzfilter/item-core", branch = "main" }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
async-stream = "0.3.6"
async-trait = { version = "0.1.88" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
aws-sdk-sqs = { version = "1.65.0" }

[dev-dependencies]
test-api = { git = "https://github.com/blitzfilter/test-api", branch = "main" }
