[package]
name = "scrape"
version = "0.1.0"
edition = "2024"

[dependencies]
item-core = { git = "https://github.com/blitzfilter/item-core", branch = "main" }
item-read = { git = "https://github.com/blitzfilter/item-read", branch = "main" }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
async-stream = "0.3.6"
async-trait = { version = "0.1.88" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
aws-sdk-sqs = { version = "1.67.0" }
aws-sdk-dynamodb = "1.72.1"
lambda_runtime = { version = "0.13.0" }
uuid = { version = "1.16.0", features = ["v4"] }
tracing = "0.1.41"

[dev-dependencies]
test-api = { git = "https://github.com/blitzfilter/test-api", branch = "main" }
serial_test = "3.2.0"